<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="duckydev.android.com.currency.com.android.com.currency.fragment.GoldPriceFragment">

    <TextView
        android:id="@+id/updateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2E7D32"
        android:gravity="center"
        android:padding="5dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateTv"
        android:background="#5b7d2e"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/typeTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/gold_type" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:orientation="vertical">
            .

            <TextView
                android:id="@+id/buyTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:text="@string/buy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sellTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:text="@string/sell" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:layout_above="@+id/sourceTv"
        android:layout_below="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.halfbit.pinnedsection.PinnedSectionListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/colorPrimaryDark" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/sourceTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:autoLink="all"
        android:background="#2E7D32"
        android:gravity="center"
        android:linksClickable="false"
        android:padding="5dp"
        android:text="@string/gold_source"
        android:textStyle="italic" />

</RelativeLayout>